--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@
 		  <img src = "imgs/wisconsin_dells.jpg" width="25" alt="wisconsin photo">
 		  <img src = "imgs/badlands.jpg" width="1000" alt="badlands photo">
 		  <img src = "imgs/falling.jpg" width="25" alt="falling picutre">
-		  <img src = "imgs/jewel_cave.jpg" width="1000" alt="jewel cave photo">
+		  <img src = "imgs/jewel_cave.JPG" width="1000" alt="jewel cave photo">
 	</main>
 	Colleen van Lent &copy; 2020
 </body>
