--- a/personal.html
+++ b/personal.html
@@ -18,17 +18,21 @@
 			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		</ul>
 	  </nav>
+	  
+	  <h1>Family</h1>
 	</header>
 	
 	<main>
-	  <h1>Family</h1>
 	  	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
 		  <img src = "imgs/wisconsin_dells.jpg" width="25" alt="wisconsin photo">
 		  <img src = "imgs/badlands.jpg" width="1000" alt="badlands photo">
 		  <img src = "imgs/falling.jpg" width="25" alt="falling picutre">
 		  <img src = "imgs/jewel_cave.JPG" width="1000" alt="jewel cave photo">
 	</main>
-	Colleen van Lent &copy; 2020
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
+	
 </body>
 </html>
 
